<resources>
    <string name="app_name">Formula 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_racing">Racing</string>
    <string name="text_standings">Standings</string>
    <string name="text_circuits">Circuits</string>
    <string name="text_number_1">1</string>
    <string name="text_driver_name">Max Verstappen</string>
    <string name="text_score">100</string>
    <string name="text_search">Search</string>
    <string name="text_2022">2022</string>
    <string name="text_enter_the_year">Enter the Year</string>
    <string name="text_max">MAX</string>
    <string name="text_birth_day">Birthday: </string>
    <string name="text_birth_place">Birthplace: </string>
    <string name="text_nationality">Nationality: </string>
    <string name="text_grand_prix_entered">Grand Prix Entered</string>
    <string name="text_podium_number">Podiums</string>
    <string name="text_highest_position">Highest Position</string>
    <string name="text_career_points">Career Points</string>
    <string name="text_current_team">Current Team</string>
    <string name="text_base">Base: </string>
    <string name="text_first_entry">First Entry: </string>
    <string name="text_world_championship">World Championship: </string>
    <string name="text_director">Director: </string>
    <string name="text_chasis">Chasis: </string>
    <string name="text_engine">Engine: </string>
    <string name="text_tyres">Tyres: </string>
    <string name="text_pole_positions">Pole Positions</string>
    <string name="text_highest_finish">Highest Finish</string>
    <string name="text_drivers">Drivers</string>
    <string name="text_driver">Driver</string>
    <string name="text_location">Location: </string>
    <string name="text_first_time_open">Opened: </string>
    <string name="text_first_grand_prix">First Grand Prix: </string>
    <string name="text_total_laps">Laps Per Race: </string>
    <string name="text_race_distance">Race Distance: </string>
    <string name="text_capacity">Capacity: </string>
    <string name="text_lap_record">Lap Record</string>
    <string name="text_archived_by">Driver: </string>
    <string name="text_time_record">Time: </string>
    <string name="text_year">Year: </string>
    <string name="text_date">Date: %s</string>
    <string name="text_starting_grid">Starting Grid</string>
    <string name="text_result">Result</string>
    <string name="text_position_shortening">POS</string>
    <string name="text_qualify_result">Qualify Result</string>
    <string name="text_finish_time">Time/Res</string>
    <string name="text_point">Point</string>
    <string name="text_fake_time">1.30.555</string>
    <string name="text_dhl_fastest_lap">DHL Fastest Lap</string>
    <string name="text_zero_point">0</string>
</resources>
