<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_120"
    android:layout_marginHorizontal="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_8"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_20">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/text_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/text_number_1"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/dp_2"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_60"
            android:background="@color/color_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_team_name"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/text_driver_name"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_24"
            android:src="@drawable/img_driver_fer"
            app:layout_constraintBottom_toTopOf="@id/text_score"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_score"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/bg_team_score_border"
            android:fontFamily="@font/formula1_regular"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/text_score"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/img_logo"
            app:layout_constraintRight_toRightOf="@id/img_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
